--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,9 +19,6 @@ jobs:
             - name: Checkout Repo
               uses: actions/checkout@v3
 
-            - name: Install Changesets
-              run: npm i -g @changesets/cli
-
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v2
 
@@ -33,6 +30,12 @@ jobs:
               with:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Setup PNPM
+              uses: pnpm/action-setup@v2.2.4
+              with:
+                  version: latest
+                  run_install: true
 
             - name: Create Release Pull Request or Release
               id: changesets
