--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,8 +37,8 @@ jobs:
                   version: latest
                   run_install: true
 
-            - name: Create Empty .env
-              run: touch .env
+            - name: Create .env
+              run: cp .env.example .env
 
             - name: Create Release Pull Request or Release
               id: changesets
