--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,11 @@ services:
         image: neo4j:latest
         restart: unless-stopped
         environment:
-            NEO4JLABS_PLUGINS: '["apoc"]'
+            NEO4J_PLUGINS: '["apoc"]'
+            apoc.export.file.enabled: 'true'
+            apoc.import.file.enabled: 'true'
+            apoc.import.file.use_neo4j_config: 'true'
+            NEO4J_dbms_security_procedures_unrestricted: 'apoc.*'
         env_file:
             - .env
         expose:
