--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@types/cookie": "^0.5.1",
 		"@types/jsonwebtoken": "^9.0.1",
+		"@types/pangu": "^4.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.51.0",
 		"@typescript-eslint/parser": "^5.51.0",
 		"@unicourse-tw/validation": "1.0.0-alpha.14",
@@ -48,6 +49,7 @@
 		"lint-staged": "^13.1.0",
 		"neo4j-driver": "^5.5.0",
 		"neo4j-ogm": "1.0.0-dev.2",
+		"pangu": "^4.0.7",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.3",
 		"prettier-plugin-svelte": "^2.9.0",
