--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"reconnecting-eventsource": "^1.6.2",
 		"svelte": "^3.55.1",
 		"svelte-check": "^3.0.3",
+		"svelte-i18n": "^3.6.0",
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.5.0",
 		"tsup": "^6.5.0",
