--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
 		"@neoconfetti/svelte": "^1.0.0",
 		"@paralleldrive/cuid2": "^2.0.1",
 		"@playwright/test": "^1.30.0",
-		"@sveltejs/adapter-auto": "^1.0.3",
-		"@sveltejs/adapter-node": "^1.1.7",
-		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/adapter-node": "^1.1.8",
+		"@sveltejs/kit": "^1.5.5",
 		"@tailwindcss/typography": "^0.5.9",
 		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@types/cookie": "^0.5.1",
+		"@types/debug": "^4.1.7",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/pangu": "^4.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.51.0",
@@ -40,32 +40,33 @@
 		"autoprefixer": "^10.4.13",
 		"course-pack": "1.0.0-alpha.15",
 		"daisyui": "^2.50.0",
+		"debug": "^4.3.4",
 		"dotenv": "^16.0.3",
-		"eslint": "^8.33.0",
+		"eslint": "^8.34.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"husky": "^8.0.3",
 		"jsonwebtoken": "^9.0.0",
-		"lint-staged": "^13.1.0",
+		"lint-staged": "^13.1.1",
 		"neo4j-driver": "^5.5.0",
 		"neo4j-ogm": "1.0.0-dev.2",
 		"pangu": "^4.0.7",
 		"postcss": "^8.4.21",
-		"prettier": "^2.8.3",
+		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
 		"prettier-plugin-tailwindcss": "^0.2.2",
 		"reconnecting-eventsource": "^1.6.2",
 		"svelte": "^3.55.1",
 		"svelte-check": "^3.0.3",
 		"svelte-i18n": "^3.6.0",
-		"tailwindcss": "^3.2.4",
+		"tailwindcss": "^3.2.6",
 		"tslib": "^2.5.0",
-		"tsup": "^6.5.0",
+		"tsup": "^6.6.2",
 		"typescript": "^4.9.5",
 		"unicourse": "1.0.0-alpha.15",
 		"vite": "^4.1.1",
 		"vitest": "^0.28.4",
-		"zod": "^3.20.2",
+		"zod": "^3.20.6",
 		"zod-validation-error": "^0.3.1"
 	},
 	"lint-staged": {
@@ -75,7 +76,7 @@
 	},
 	"dependencies": {
 		"argon2": "^0.30.3",
-		"aws-sdk": "^2.1310.0",
+		"aws-sdk": "^2.1313.0",
 		"mock-aws-s3": "^4.0.2",
 		"nock": "^13.3.0"
 	}
