--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,14 @@ services:
             - .env
         expose:
             - "3000:3000"
+        depends_on:
+            - db
     tunnel:
         image: cloudflare/cloudflared:latest
         command: "tunnel --no-autoupdate run --token ${CLOUDFLARED_TOKEN}"
+        restart: unless-stopped
+        depends_on:
+            - realm
 
 volumes:
     data: {}
