--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
 		]
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.321.1",
 		"argon2": "^0.30.3",
-		"aws-sdk": "^2.1313.0",
 		"mock-aws-s3": "^4.0.2",
 		"nock": "^13.3.0"
 	}
