feat: add r2 api

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ NEO4J_AUTH="${NEO4J_USER}/${NEO4J_PASSWORD}"
 JWT_SECRET="unicourse-jwt-secret"
 CLOUDFLARED_TOKEN=""
 UNICOURSE_FIRST_INVITATION_CODE="first_code"
+# CLOUDFLARE_R2_ENDPOINT = "https://your.r2.endpoint"
+# CLOUDFLARE_ACCESS_KEY_ID = ""
+# CLOUDFLARE_SECRET_ACCESS_KEY = ""
