ci: add r2 related config to auto test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,3 +25,7 @@ jobs:
 
             - name: Build All
               run: pnpm build
+              env:
+                  CLOUDFLARE_R2_ENDPOINT: ${{ secrets.R2_BUCKET_DEV }}
+                  CLOUDFLARE_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
+                  CLOUDFLARE_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
