--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@ NEO4J_AUTH="${NEO4J_USER}/${NEO4J_PASSWORD}"
 JWT_SECRET="unicourse-jwt-secret"
 CLOUDFLARED_TOKEN=""
 UNICOURSE_FIRST_INVITATION_CODE="first_code"
-# CLOUDFLARE_R2_ENDPOINT = "https://your.r2.endpoint"
-# CLOUDFLARE_ACCESS_KEY_ID = ""
-# CLOUDFLARE_SECRET_ACCESS_KEY = ""
+CLOUDFLARE_R2_ENDPOINT="https://your.r2-or-s3.endpoint"
+CLOUDFLARE_ACCESS_KEY_ID="your_access_key_id"
+CLOUDFLARE_SECRET_ACCESS_KEY="your_secret_access_key"
