feat: email server module

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ CLOUDFLARE_R2_ENDPOINT="https://your.r2-or-s3.endpoint"
 CLOUDFLARE_ACCESS_KEY_ID="your_access_key_id"
 CLOUDFLARE_SECRET_ACCESS_KEY="your_secret_access_key"
 CLOUDFLARE_R2_BUCKET="unicourse"
+HERMES_TOKEN="jwt-to-send-email"
+HERMES_ENDPOINT="https://hermes.csie.cool/"
+EMAIL_SENDER="noreply@unicourse.tw"
+EMAIL_SENDER_NAME="UniCourse"
